# JioSaavn

./: README.md  Test.py  pyproject.toml  run.sh
.github/workflows/: publish.yml
JioSaavn/: __init__.py  endpoints.py
JioSaavn/Core/: Client.py  Parser.py  Request.py
JioSaavn/Formatter/: Album.py  Playlist.py  Song.py
JioSaavn/Modules/: Album.py  Lyrics.py  Playlist.py  Search.py  Song.py
JioSaavn/Utils/: Crypto.py  Text.py
