[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SaavnAPI"
version = "2026.4.10"
description = "Fast async JioSaavn API wrapper for Python"
readme = "README.md"
requires-python = ">=3.8"

authors = [
  { name = "ABHISHEK THAKUR" }
]

license = { text = "MIT" }

keywords = [
  "jiosaavn",
  "music",
  "api",
  "async",
  "python",
  "songs",
  "lyrics",
  "streaming"
]

dependencies = [
  "aiohttp>=3.9.0",
  "pyDes>=2.0.1"
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Framework :: AsyncIO",
  "Topic :: Multimedia :: Sound/Audio"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["JioSaavn*"]
